update: cleaner Jupyter Notebook - exercises 1.1

--- a/SICP iracket jupyter/exercises_1.1.ipynb
+++ b/SICP iracket jupyter/exercises_1.1.ipynb
@@ -33,8 +33,30 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "87d67fd8-b06d-4294-92c6-70d90a7dff43",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#lang iracket/lang #:require sicp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "d0fc99db-1870-4761-a8b2-95de985a6d4c",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -45,7 +67,7 @@
        "10"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "faa7cdb3-0f6f-4ef1-a4a6-d1a5536eb4ad",
    "metadata": {},
    "outputs": [
@@ -69,7 +91,7 @@
        "12"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3047a829-f282-4eb0-8da2-2b73d34f8798",
    "metadata": {},
    "outputs": [
@@ -93,7 +115,7 @@
        "8"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "77bd8189-d6f5-42b5-829b-332c7d122abd",
    "metadata": {},
    "outputs": [
@@ -117,7 +139,7 @@
        "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8f3fb52d-8c5d-4539-841c-f904c816a0ee",
    "metadata": {},
    "outputs": [
@@ -141,7 +163,7 @@
        "6"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3a0c71f0-65a8-402b-a537-308f289b5f15",
    "metadata": {},
    "outputs": [
@@ -165,7 +187,7 @@
        "19"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c05ae08a-7568-4fa3-8216-3dde170e0d17",
    "metadata": {},
    "outputs": [
@@ -191,7 +213,7 @@
        "#f"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0922672f-9ccb-42d9-a594-3d5dfc039db8",
    "metadata": {},
    "outputs": [
@@ -215,7 +237,7 @@
        "4"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "07133153-f2a0-4689-b949-b41fd65c49fc",
    "metadata": {},
    "outputs": [
@@ -241,7 +263,7 @@
        "12"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,6 +280,7 @@
    "id": "b675d7fd-e311-44ee-969e-242becf904ee",
    "metadata": {
     "editable": true,
+    "jp-MarkdownHeadingCollapsed": true,
     "slideshow": {
      "slide_type": ""
     },
@@ -270,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "63b744d3-a30e-4a65-8551-473046dd736f",
    "metadata": {},
    "outputs": [
@@ -283,7 +306,7 @@
        "-37/150"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "c7057a53-28eb-4517-bf26-8742195ece1e",
    "metadata": {
     "editable": true,
@@ -352,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "aaad5551-32db-4f89-a007-71f342d74c28",
    "metadata": {},
    "outputs": [
@@ -381,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "36046d7b-0a0f-4969-bb4d-e352b4393dac",
    "metadata": {},
    "outputs": [],
@@ -403,7 +426,9 @@
   {
    "cell_type": "markdown",
    "id": "fcfd8dda-d990-4529-8987-da2554411e9b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### EXERCISE 1.5. \n",
     "Ben Bitdiddle has invented a test to **determine whether the interpreter** he is faced with **is using applicative-order evaluation OR normal-order** evaluation. He defines the following two procedures:\n",
@@ -428,7 +453,9 @@
   {
    "cell_type": "markdown",
    "id": "ed780cb1-8a59-4d76-8022-4fc1dd87614f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "[1] APPLICATIVE ORDER:\n",
     "\n",
@@ -461,7 +488,9 @@
   {
    "cell_type": "markdown",
    "id": "3d910a2e-8f62-4b23-8e9f-1b1a9bd8ccd8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "[2] NORMAL ORDER:\n",
     "An interpreter with Normal Order behavior would not call the evaluation until the values are needed(*2). So when _line 5_ `test` is called it will check if x is 0 so it will just give 0 as in _line 3_.\n",
@@ -501,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "8d06b6a3-fb9b-4d1e-b769-efa163c3b0cf",
    "metadata": {},
    "outputs": [
@@ -529,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "45492d08-aa9d-42cd-b202-57b7447a5c54",
    "metadata": {
     "editable": true,
@@ -548,7 +577,7 @@
        "5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "f86933d9-add0-40ef-9e67-ad7a0fd472b4",
    "metadata": {},
    "outputs": [
@@ -572,7 +601,7 @@
        "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "49e241d0-f425-4c7c-9a5d-ed0469cb2a6d",
    "metadata": {},
    "outputs": [],
@@ -637,7 +666,13 @@
   {
    "cell_type": "markdown",
    "id": "595fb784-8065-46c6-97b2-11f3a2b403ea",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "STATEMENTS:\n",
     "1. The **`good-enough?` test** used in computing square roots **will not be very effective** for finding the square roots **_(a) of very small numbers_**.\n",
@@ -653,7 +688,13 @@
   {
    "cell_type": "markdown",
    "id": "fc4b2c98-17fa-4673-bf20-6b19a756889a",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "##### First let's find the square roots of numbers, code imperatively the Newton method"
    ]
@@ -661,7 +702,13 @@
   {
    "cell_type": "markdown",
    "id": "8c4a80ff-5e47-4625-ac92-d8564652d117",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "I better understood the table on the page 57 (PDF page always) so let's do that\n",
     "\n",
@@ -672,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "2d87b26f-042d-4279-a056-009310ab95fd",
    "metadata": {
     "editable": true,
@@ -683,29 +730,26 @@
    },
    "outputs": [],
    "source": [
-    "; AVERAGE\n",
     "(define (average x y)\n",
-    "  (/ (+ x + y) 2))\n",
+    "  (/ (+ x y) 2))\n",
     "\n",
-    "; QUOTIENT\n",
     "(define (improve guess x)\n",
     "  (average guess (/ x guess)))\n",
     "\n",
-    "; STOPS THE FUNCTION\n",
-    "(define (good-enough? guess x)\n",
-    "  (< (abs (- (square guess)) tol)))\n",
+    "(define tol 0.00001) ; Define the tolerance value\n",
     "\n",
-    "; APPLIES THE NEWTON FORMULA ITERATIVELY\n",
+    "(define (good-enough? guess x)\n",
+    "  (< (abs (- (square guess) x)) tol))\n",
+    "\n",
+    "(define (square x) (* x x))\n",
+    "\n",
     "(define (sqrt-iter guess x)\n",
     "  (if (good-enough? guess x)\n",
     "      guess\n",
-    "      (sqrt-iter (improve guess x)\n",
-    "                 x)))\n",
+    "      (sqrt-iter (improve guess x) x)))\n",
     "\n",
-    "; It defines sqrt with the parameters of the INITIAL VALUE (1.0) and\n",
-    "; the `improve` VALUE like Newton did [such as the table below]\n",
     "(define (sqrt x)\n",
-    "  (sqrt-iter 1.0 x))"
+    "  (sqrt-iter 1.0 x))\n"
    ]
   },
   {
@@ -730,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ae2fac96-93ee-45fe-a6f6-e06b0238ba63",
    "metadata": {
     "editable": true,
@@ -739,13 +783,148 @@
     },
     "tags": []
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<code>31622.776601683792</code>"
+      ],
+      "text/plain": [
+       "31622.776601683792"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(sqrt 1000000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0e18e634-e852-4257-aa6f-620a09000158",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<code>316.2277660203896</code>"
+      ],
+      "text/plain": [
+       "316.2277660203896"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(sqrt 100000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfb599cf-c55a-4292-bde5-06a1788b40aa",
+   "metadata": {},
+   "source": [
+    "**Observations**\n",
+    "So when I define `tol`(tolerance value) as 0.00001 the following code cells:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "cbd15747-3ba7-4046-a96c-1814cf9803e4",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "; (sqrt 100000000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "35780811-c61d-49dd-9949-1d9f45e3caac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "; (sqrt 10000000000000000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e27087d-fcf9-4a67-9be8-7143688f86c9",
+   "metadata": {},
+   "source": [
+    "they don't execute. This is due to `tol` being equal to 0.00001 a numbers that declares the Newton algorithm to be of high accuracy which leads to iterating forever ~~(at least minutes have passed with * on Jupyter Lab*)~~ on these very large numbers. the code cells above _[20]_ and _[21]_ are accurate results despite being large numbers due to the high sensitivity of `tol`.\n",
+    "\n",
+    "So what happens if we equal `tol` to a number of low accuracy?\n",
+    "\n",
+    "~~*: At this point well yesterday my CPU was being with 100% of Utilization even though it was  just two browsers, it works better than yesterday ofc since I asked the fixer to put it cooling thermal pads and, so maybe it's not the code but just my computer dying on me lmaooo~~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "82b850c2-76ea-4d2a-87a2-ecaf26f1a1aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(define tol 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f2d25ffe-0a39-451f-81dc-bf4a6671fc5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<code>10000000.0</code>"
+      ],
+      "text/plain": [
+       "10000000.0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(sqrt 100000000000000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3308736-ab7a-497c-8659-91312da3bceb",
+   "metadata": {},
+   "source": [
+    "It works!"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "de8a3f61-e6ff-4b0c-88e1-ea74698a1861",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "#### SOL 1.7.1 \n",
     "statement 1: good-enough? fails for **very small numbers** _(a) with examples and (b) its verbalization_"
@@ -862,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "69bc49ec-7d33-4f41-8bc3-080497d6adf9",
    "metadata": {},
    "outputs": [],
@@ -901,7 +1080,13 @@
   {
    "cell_type": "markdown",
    "id": "4b99cd70-00db-4489-bbf1-40102b27ee7b",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "FIRST PART:\n",
     "- Defines the cube of a number.\n",
@@ -944,9 +1129,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "3ec81ab0-6bd3-4d79-a1e1-8c6aca5cf262",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
